--- a/excursion/index.html
+++ b/excursion/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Экскурсии по Санкт-Петербургу</title>
         <meta charset="utf=8">
-        <link rel="stylesheet" href="styles.css"> 
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body class="page-body">
         <header class="page-header">
@@ -55,12 +55,12 @@
          <section id="audience">
                 <h2>Кому подойдет экскурсия?</h2>
                 <img src="images/auditory-1.jpg" alt="Девушка улыбается на экскурсии в Санкт-Петербурге" width="246" height="160">
-                <ol>
-                    <li>•	Организованным группам от 15 человек.</li>
-                    <li>•	Индивидуальным путешественникам.</li>
-                    <li>•	Компаниям друзей.</li>
-                    <li>•	Семьям с детьми старше 12 лет.</li>
-                </ol>
+                <ul>
+                    <li>Организованным группам от 15 человек.</li>
+                    <li>Индивидуальным путешественникам.</li>
+                    <li>Компаниям друзей.</li>
+                    <li>Семьям с детьми старше 12 лет.</li>
+                </ul>
           </section>
 
             
